--- a/AI_Powered_Cyber_Threat_And_Response_Alert/frontend-react/package.json
+++ b/AI_Powered_Cyber_Threat_And_Response_Alert/frontend-react/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
