--- a/AI_Powered_Cyber_Threat_And_Response_Alert/backend/requirements.txt
+++ b/AI_Powered_Cyber_Threat_And_Response_Alert/backend/requirements.txt
@@ -6,10 +6,12 @@ pydantic
 pydantic-settings
 python-jose[cryptography]
 passlib[bcrypt]
+passlib[argon2]
+argon2-cffi
 python-multipart
 joblib
 numpy
 pandas
-scikit-learn
+scikit-learn==1.5.2
 fastapi-mail
 pyotp
